--- a/GymGoals/src/app/landing-page/landing-page.component.html
+++ b/GymGoals/src/app/landing-page/landing-page.component.html
@@ -1,29 +1,29 @@
-<div class="landing">
-    <div class="hero">
-   
-        <div class="app-heading">
-            GYMGOALS   
-        </div>
-        <div class="three-cards">
-            <figure class="snip1091 red"><img src="../../../assets/image1.jpg" alt="sq-sample6"/>
-                <figcaption>
-                  <h2>Gym  <span>Buddy</span></h2>
-                </figcaption><a href="#"></a>
-              </figure>
-              <figure class="snip1091 green"><img src="../../../assets/image2.jpg" alt="sq-sample14"/>
-                <figcaption>
-                  <h2>Personal   <span>Trainer</span></h2>
-                </figcaption><a href="#"></a>
-              </figure>
-              <figure class="snip1091 navy"><img src="../../../assets/image3.jpg" alt="sq-sample10"/>
-                <figcaption>
-                  <h2>Fitness  <span>Companion</span></h2>
-                </figcaption><a href="#"></a>
-              </figure>
-        </div>
-    </div>
+<div class="d-sm-flex align-items-center justify-content-between w-100" style="height: 100vh; margin-bottom: 90px;">
+  <div class="col-md-4 mx-auto mb-4 mb-sm-0 p-4 headline">
+    <span class="text-secondary text-uppercase">"Harness the Power of Technology to Achieve Your Fitness Goals Anywhere, Anytime"</span>
+    <h1 class="display-4 my-4 font-weight-bold">"Get Fit, Get Motivated: <span style="color: #9B5DE5;">Elevate Your Workout Experience with Gym Apps"</span></h1>
+    <a href="#" class="btn px-5 py-3 text-white mt-3 mt-sm-0" style="border-radius: 30px; background-color: #9B5DE5;">Get Started</a>
+  </div>
+  <!-- in mobile remove the clippath -->
+  <div class="col-md-8 h-100 clipped" style="min-height: 350px; background-image: url(../../assets/crossfit.jpg); background-position: center; background-size: cover;">
+
+  </div>
 </div>
-
-
-
-
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 text-center">
+      <h2 data-text="Gym Goals">Gym Goals</h2>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="column">
+    <img src="../../assets/image1.jpeg" alt="Snow" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="../../assets/image2.jpeg" alt="Forest" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="../../assets/image3.jpg" alt="Mountains" style="width:100%">
+  </div>
+</div>
