--- a/GymGoals/src/app/footer/footer.component.html
+++ b/GymGoals/src/app/footer/footer.component.html
@@ -54,7 +54,7 @@
               <a href="/register" *ngIf="user === null" class="text-white">Sign Up</a>
             </p>
             <p>
-              <a href="/signIn" *ngIf="user === null" class="text-white">Sign In</a>
+              <a href="/login" *ngIf="user === null" class="text-white">Sign In</a>
             </p>
             <p>
               <a href="/contact" class="text-white">Contact</a>
