--- a/GymGoals/src/app/login/login.component.html
+++ b/GymGoals/src/app/login/login.component.html
@@ -30,5 +30,8 @@
 		<div class="col-md-6 mb-2" *ngIf="loginForm.valid">
             <button class="btn btn-primary col-lg-15" (click)="login()">Login</button>
         </div>
+		<p style="color: blue; text-align-last: right; cursor: pointer;" (click)="forgotPassword()">
+			Forgot Password?
+		</p>
 	</div>
 </form>
