--- a/GymGoals/src/app/landing-page/landing-page.component.html
+++ b/GymGoals/src/app/landing-page/landing-page.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-4 mx-auto mb-4 mb-sm-0 p-4 headline">
     <span class="text-secondary text-uppercase">"Harness the Power of Technology to Achieve Your Fitness Goals Anywhere, Anytime"</span>
     <h1 class="display-4 my-4 font-weight-bold">"Get Fit, Get Motivated: <span style="color: #9B5DE5;">Elevate Your Workout Experience with Gym Apps"</span></h1>
-    <a href="#" class="btn px-5 py-3 text-white mt-3 mt-sm-0" style="border-radius: 30px; background-color: #9B5DE5;">Get Started</a>
+    <a href="/workout/create" class="btn px-5 py-3 text-white mt-3 mt-sm-0" style="border-radius: 30px; background-color: #9B5DE5;">Get Started</a>
   </div>
   <!-- in mobile remove the clippath -->
   <div class="col-md-8 h-100 clipped" style="min-height: 350px; background-image: url(../../assets/crossfit.jpg); background-position: center; background-size: cover;">
