--- a/GymGoals/src/app/footer/footer.component.html
+++ b/GymGoals/src/app/footer/footer.component.html
@@ -30,12 +30,12 @@
                 class="mb-4 mt-0 d-inline-block mx-auto"
                 style="width: 60px; background-color: #7c4dff; height: 2px"
                 />
-            <p>
-              <a href="#!" class="text-white">Workout Plans</a>
-            </p>
-            <p>
-              <a href="#!" class="text-white">Create Workout Plan</a>
-            </p>
+                <p>
+                  <a class="nav-link active" aria-current="page" href="/workout/main-page"  *ngIf="(user != null && user.verification == 'verified')">Workout Plans</a>
+                </p>
+                <p>
+              <a class="nav-link active" aria-current="page" href="/workout/create" *ngIf="(user != null && user.verification == 'verified')">Create Workout Plans</a>
+                </p>
           </div>
           <!-- Grid column -->
 
